# Distribution.Music

./: .gitignore  DistributionMusic.cabal  README.md
src/: MP3Hooks.hs  Main.hs  Setup.hs
src/Distribution/: Music.hs
src/MP3Hooks/: Core.hs
