name:                DistributionMusic
version:             0.1.3.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaeGon/Distribution.Music#readme
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          MichaeGon
copyright:           2016 MichaeGon
-- category:            Web
build-type:          Custom
cabal-version:       >=1.10

executable DistributionMusic
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       MP3Hooks
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, Cabal, directory, process, random
